@@ -1,3 +1,15 @@
+2016-11-30  Dave Hyatt  <hyatt@apple.com>
+
+        [CSS Parser] Fix columns shorthand parsing
+        https://bugs.webkit.org/show_bug.cgi?id=165210
+
+        Reviewed by Zalan Bujtas.
+
+        * css/parser/CSSPropertyParser.cpp:
+        (WebCore::CSSPropertyParser::consumeColumns):
+        (WebCore::consumeColumnWidthOrCount): Deleted.
+        Bring over the old parser code, since it was actually better at creating implicit values for auto.
+
 2016-11-30  Andy Estes  <aestes@apple.com>
 
         [Cocoa] Pass the embedding app's bundle ID to new instances of NEFilterSource
